# wenas

./: .gitignore  CMakeLists.txt  Makefile.am  Makefile.in  README.md  bootstrap  config.h.in  configure  configure.ac  make.sh  mtpd.service  start-service.sh  win-make.bat  xltpd.service
.github/workflows/: cmake.yml
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
build-scripts/: linux-build.sh
example/: Makefile.am  Makefile.in  aligned_malloc.c  malloc.c  media.c  memory_leak.c  message.c  pipe.c  queue.c
include/: Makefile.am  Makefile.in  sr_atom.h  sr_byte.h  sr_common.h  sr_error.h  sr_lib.h  sr_library.h  sr_log.h  sr_malloc.h  sr_media.h  sr_media_file.h  sr_memory.h  sr_message.h  sr_mutex.h  sr_pipe.h  sr_queue.h  sr_time.h
src/: Makefile.am  Makefile.in  SR_Malloc.cpp  main.c  main.cpp  sr_backtrace.c  sr_common.c  sr_lib.c  sr_library.c  sr_log.c  sr_malloc.c  sr_media.c  sr_media_file.c  sr_memory.c  sr_message.c  sr_mutex.c  sr_pipe.c  sr_queue.c  sr_time.c
src/app/: client.c  client.cpp  server.c  xchord.c  xfollower.c  xleader.c  xltp.c  xltp.h  xltpd.c  xpeer.c  xpeer.h  xserver.c
src/business/: README.md  client.cpp  server.c
src/env/: atomic.h  backtrace.c  backtrace.h  crash_backtrace.h  disk.h  env.h  file_system.h  linetask.c  linetask.h  logger.c  logger.h  malloc.c  malloc.h  mutex.h  pipe.c  platforms.h  socket.c  socket.h  storage.c  task.h  task_queue.h  thread.c  thread.h  time.c
src/env/backtrace/: crash_backtrace.h  env_backtrace.h  env_unwind.h
src/env/dep/: README.md
src/env/malloc/: env_malloc.c  env_malloc.h  sr_malloc.c  sr_malloc.h
src/env/task/: task_queue.h
src/env/unix/: backtrace.c  file_system.h  malloc.c  malloc.h  thread.h  unix.c  unix.h
src/env/win/: win.c  win.h
src/env/win/lib/: libpthreadVSE3.lib
src/ex/: backtrace.c  ex.c  ex.h  file.c  linetask.c  logger.c  malloc.c  malloc.h  pipe.c  storage.c  task.c  task.h  time.c  xatom.h  xlog.c
src/sys/math/: README.md
src/sys/struct/: README.md  antenna.h  heap.h  linear_data_block.h  linear_key_value.h  lineardb.h  lineardb_pipe.h  lineardb_pipe_test.c  lineardb_test.c  linearkv.h  linearkv_test.c  linedb.h  linekv.h  mtp.h  test.c  tree.h  xavlmini.c  xavlmini.h  xbuf.h  xhash64.c  xhash64.h  xheap.h  xline.c  xline.h  xmalloc.c  xmalloc.h  xmessenger.h  xmsger.c  xmsger.h  xsha256.h  xtable.c  xtable.h  xtree.h
src/xapi/: README.md  backtrace.c  ex.cpp  file.c  socket.c  task.c  task.h  xapi.c  xapi.h  xatom.h  xlog.c
src/xlib/: avlmini.c  avlmini.h  xsha256.c  xsha256.h  xxhash.c  xxhash.h
src/xnet/: uuid.c  uuid.h  xalloc.c  xalloc.h  xbuf.h  xheap.h  xline.h  xlio.c  xlio.h  xltp.c  xltp.h  xmalloc.c  xmalloc.h  xmsg.h  xmsger.c  xmsger.h  xpipe.h  xtable.c  xtable.h  xtree.h
test/: test.c
test/business/Android/app/: build.gradle
test/business/Android/app/src/androidTest/java/org/appspot/myapplication/: ExampleInstrumentedTest.java
test/business/Android/app/src/main/: AndroidManifest.xml
test/business/Android/app/src/main/cpp/: native-lib.cpp
test/business/Android/app/src/main/java/org/appspot/myapplication/: MainActivity.java
test/business/Android/app/src/test/java/org/appspot/myapplication/: ExampleUnitTest.java
test/business/Android/gradle/wrapper/: gradle-wrapper.properties
test/env/: disk_test.c  file_system_test.c  linetask_test.c  logger_test.c  socket_test.c  storage_test.c  task_queue_test.c  thread_test.c
test/env/backtrace/: crash_backtrace_test.c
test/env/malloc/: malloc_test.c  sr_malloc.c
test/env/task/: task_queue_test.c
test/sys/struct/: dht_test.c  heap_test.c  lineardb_pipe_test.c  lineardb_test.c  linearkv_test.c  linedb_test.c  linekv_test.c  tree_test.c
test/xapi/: socket_test.c  thread_test.c
test/xnet/: dht_test.c  heap_test.c  linekv_test.c  xline_test.c
