bin_PROGRAMS = queue pipe malloc memory_leak media


queue_SOURCES=queue.c
queue_LDADD=$(top_srcdir)/src/libsr.la
queue_CFLAGS=-I$(top_srcdir)/include -std=gnu99
queue_LDFLAGS=


pipe_SOURCES=pipe.c
pipe_LDADD=$(top_srcdir)/src/libsr.la
pipe_CFLAGS=-I$(top_srcdir)/include -std=gnu99
pipe_LDFLAGS=


malloc_SOURCES=malloc.c
malloc_LDADD=$(top_srcdir)/src/libsr.la
malloc_CFLAGS=-I$(top_srcdir)/include -std=gnu99
malloc_LDFLAGS=


memory_leak_SOURCES=memory_leak.c
memory_leak_LDADD=$(top_srcdir)/src/libsr.la
memory_leak_CFLAGS=-I$(top_srcdir)/include -std=gnu99
memory_leak_LDFLAGS=


media_SOURCES=media.c
media_LDADD=$(top_srcdir)/src/libsr.la
media_CFLAGS=-I$(top_srcdir)/include -std=gnu99
media_LDFLAGS=
