lib_LTLIBRARIES=libsr.la

libsr_la_SOURCES= \
        sr_log.c \
        sr_time.c \
        sr_pipe.c \
        sr_mutex.c \
        sr_memory.c \
		sr_media.c \
		sr_media_file.c


libsr_la_CPPFLAGS= \
        -I$(top_srcdir)/include

libsr_la_LIBADD= \
        -lpthread

libsr_la_CFLAGS= \
        -std=gnu99

libsr_la_LDFLAGS=
